--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ language:
 rvm:  
   - 1.9.2
   - 1.9.3
+  - jruby-19mode # JRuby in 1.9 mode
+  - rbx-19mode   # Rubinius in 1.9 mode
 script:
   - bundle exec rspec spec
