--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,21 @@ rvm:
   - 2.2
   - 2.3
   - 2.4
+  - ruby-head
+gemfile:
+  - gemfiles/rails42.gemfile
+  - gemfiles/rails50.gemfile
+  - gemfiles/rails51.gemfile
+  - gemfiles/rails42_haml.gemfile
+  - gemfiles/rails50_haml.gemfile
+  - gemfiles/rails51_haml.gemfile
+  - gemfiles/rails42_boc.gemfile
+  - gemfiles/rails50_boc.gemfile
+  - gemfiles/rails51_boc.gemfile
+  - gemfiles/rack.gemfile
+  - gemfiles/rack_boc.gemfile
+matrix:
+  fast_finish: true
+  allow_failures:
+    # - gemfile: gemfiles/rack.gemfile
+    - rvm: ruby-head
