--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,34 @@ matrix:
   allow_failures:
     # - gemfile: gemfiles/rack.gemfile
     - rvm: ruby-head
+  exclude:
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails50.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails50_boc.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails50_haml.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails51.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails51_boc.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails51_haml.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails50.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails50_boc.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails50_haml.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails51.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails51_boc.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails51_haml.gemfile
+    - rvm: 2.4.1
+      gemfile: gemfiles/rails42.gemfile
+    - rvm: 2.4.1
+      gemfile: gemfiles/rails42_boc.gemfile
+    - rvm: 2.4.1
+      gemfile: gemfiles/rails42_haml.gemfile
