--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,15 @@ gemfile:
   - gemfiles/rails51_boc.gemfile
   - gemfiles/rack.gemfile
   - gemfiles/rack_boc.gemfile
+  - gemfiles/pry09.gemfile
+  - gemfiles/pry010.gemfile
+  - gemfiles/pry011.gemfile
 matrix:
   fast_finish: true
   allow_failures:
-    # - gemfile: gemfiles/rack.gemfile
     - rvm: ruby-head
+    - gemfile: gemfiles/pry010.gemfile
+    - gemfile: gemfiles/pry011.gemfile
   exclude:
     - rvm: 2.0.0
       gemfile: gemfiles/rails50.gemfile
