--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,15 @@ gemfile:
   - gemfiles/rails42.gemfile
   - gemfiles/rails50.gemfile
   - gemfiles/rails51.gemfile
+  - gemfiles/rails52.gemfile
   - gemfiles/rails42_haml.gemfile
   - gemfiles/rails50_haml.gemfile
   - gemfiles/rails51_haml.gemfile
+  - gemfiles/rails52_haml.gemfile
   - gemfiles/rails42_boc.gemfile
   - gemfiles/rails50_boc.gemfile
   - gemfiles/rails51_boc.gemfile
+  - gemfiles/rails52_boc.gemfile
   - gemfiles/rack.gemfile
   - gemfiles/rack_boc.gemfile
   - gemfiles/pry09.gemfile
