--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,12 @@ matrix:
       gemfile: gemfiles/rails51_boc.gemfile
     - rvm: 2.0.0
       gemfile: gemfiles/rails51_haml.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails52.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails52_boc.gemfile
+    - rvm: 2.0.0
+      gemfile: gemfiles/rails52_haml.gemfile
     - rvm: 2.1.10
       gemfile: gemfiles/rails50.gemfile
     - rvm: 2.1.10
@@ -64,6 +70,12 @@ matrix:
       gemfile: gemfiles/rails51_boc.gemfile
     - rvm: 2.1.10
       gemfile: gemfiles/rails51_haml.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails52.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails52_boc.gemfile
+    - rvm: 2.1.10
+      gemfile: gemfiles/rails52_haml.gemfile
     - rvm: 2.4.4
       gemfile: gemfiles/rails42.gemfile
     - rvm: 2.4.4
