Fix gem update asking for confirmation
`gem update` has no --executables argument, so it waits indefinitely for confirmation before replacing an executable. This removes the old bundler version completely rather than using `gem update`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,12 @@ before_install:
     elif [[ `ruby -v` == *"ruby 2.2"* ]]; then
       rvm @global do gem install rubygems-update -v '<3'
       update_rubygems
-      rvm @global do gem update bundler --force --executables
+      rvm @global do gem uninstall bundler --force --executables
+      rvm @global do gem install bundler
     else
       rvm @global do gem update --system
-      rvm @global do gem update bundler --force --executables
+      rvm @global do gem uninstall bundler --force --executables
+      rvm @global do gem install bundler
     fi
 
 notifications:
