--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,16 @@
 sudo: false
 language: ruby
 cache: bundler
+before_install:
+  # Since Rails 4.2 only supports rubygems < 2, we must install an older version for it.
+  - >
+    if [[ "$BUNDLE_GEMFILE" =~ "rails42" ]]; then
+      rvm @global do gem install rubygems-update -v '<2'
+      update_rubygems
+      rvm @global do gem uninstall bundler --force --executables
+      rvm @global do gem install bundler -v "~> 1.3"
+    fi
+
 notifications:
   webhooks:
     # With COVERALLS_PARALLEL, coverage information sent to coveralls will not be processed until
