--- a/.travis.yml
+++ b/.travis.yml
@@ -12,20 +12,25 @@ rvm:
   - 2.3.8
   - 2.4.9
   - 2.5.7
+  - 2.6.5
+  - 2.7.0
   - ruby-head
 gemfile:
   - gemfiles/rails42.gemfile
   - gemfiles/rails50.gemfile
   - gemfiles/rails51.gemfile
   - gemfiles/rails52.gemfile
+  - gemfiles/rails60.gemfile
   - gemfiles/rails42_haml.gemfile
   - gemfiles/rails50_haml.gemfile
   - gemfiles/rails51_haml.gemfile
   - gemfiles/rails52_haml.gemfile
+  - gemfiles/rails60_haml.gemfile
   - gemfiles/rails42_boc.gemfile
   - gemfiles/rails50_boc.gemfile
   - gemfiles/rails51_boc.gemfile
   - gemfiles/rails52_boc.gemfile
+  - gemfiles/rails60_boc.gemfile
   - gemfiles/rack.gemfile
   - gemfiles/rack_boc.gemfile
   - gemfiles/pry09.gemfile
@@ -38,6 +43,12 @@ matrix:
     - gemfile: gemfiles/pry010.gemfile
     - gemfile: gemfiles/pry011.gemfile
   exclude:
+    - rvm: 2.2.10
+      gemfile: gemfiles/rails60.gemfile
+    - rvm: 2.2.10
+      gemfile: gemfiles/rails60_boc.gemfile
+    - rvm: 2.2.10
+      gemfile: gemfiles/rails60_haml.gemfile
     - rvm: 2.3.8
       gemfile: gemfiles/rails42.gemfile
     - rvm: 2.3.8
@@ -55,4 +66,22 @@ matrix:
     - rvm: 2.5.7
       gemfile: gemfiles/rails42_boc.gemfile
     - rvm: 2.5.7
+      gemfile: gemfiles/rails42_haml.gemfile
+    - rvm: 2.6.5
+      gemfile: gemfiles/rails42.gemfile
+    - rvm: 2.6.5
+      gemfile: gemfiles/rails42_boc.gemfile
+    - rvm: 2.6.5
+      gemfile: gemfiles/rails42_haml.gemfile
+    - rvm: 2.7.0
+      gemfile: gemfiles/rails42.gemfile
+    - rvm: 2.7.0
+      gemfile: gemfiles/rails42_boc.gemfile
+    - rvm: 2.7.0
+      gemfile: gemfiles/rails42_haml.gemfile
+    - rvm: ruby-head
+      gemfile: gemfiles/rails42.gemfile
+    - rvm: ruby-head
+      gemfile: gemfiles/rails42_boc.gemfile
+    - rvm: ruby-head
       gemfile: gemfiles/rails42_haml.gemfile
