--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CI
 
 on:
   push:
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: true
       matrix:
         ruby:
           - 2.2.10
@@ -23,26 +24,27 @@ jobs:
           - ruby-head
           - truffleruby-head
         gemfile:
-          - gemfiles/rails42.gemfile
-          - gemfiles/rails50.gemfile
-          - gemfiles/rails51.gemfile
-          - gemfiles/rails52.gemfile
-          - gemfiles/rails60.gemfile
-          - gemfiles/rails42_haml.gemfile
-          - gemfiles/rails50_haml.gemfile
-          - gemfiles/rails51_haml.gemfile
-          - gemfiles/rails52_haml.gemfile
-          - gemfiles/rails60_haml.gemfile
-          - gemfiles/rails42_boc.gemfile
-          - gemfiles/rails50_boc.gemfile
-          - gemfiles/rails51_boc.gemfile
-          - gemfiles/rails52_boc.gemfile
-          - gemfiles/rails60_boc.gemfile
-          - gemfiles/rack.gemfile
-          - gemfiles/rack_boc.gemfile
-          - gemfiles/pry09.gemfile
-          - gemfiles/pry010.gemfile
-          - gemfiles/pry011.gemfile
+          # These are located in the gemfiles/ folder
+          - rails42
+          - rails50
+          - rails51
+          - rails52
+          - rails60
+          - rails42_haml
+          - rails50_haml
+          - rails51_haml
+          - rails52_haml
+          - rails60_haml
+          - rails42_boc
+          - rails50_boc
+          - rails51_boc
+          - rails52_boc
+          - rails60_boc
+          - rack
+          - rack_boc
+          - pry09
+          - pry010
+          - pry011
 
     steps:
     - uses: actions/checkout@v2
@@ -66,9 +68,9 @@ jobs:
     - name: Bundle install
       run: bundle install --jobs 4 --retry 3
       env:
-        BUNDLE_GEMFILE: ${{ matrix.gemfile }}
+        BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
 
     - name: RSpec
       run: bundle exec rspec -f doc --color
       env:
-        BUNDLE_GEMFILE: ${{ matrix.gemfile }}
+        BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
