--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ on:
     - cron: '0 0 12,26 * *' # roughly every two weeks to run on new Ruby versions
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
 
 jobs:
   test:
