--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,18 +32,21 @@ jobs:
           - rails52
           - rails60
           - rails61
+          - rails70
           - rails42_haml
           - rails50_haml
           - rails51_haml
           - rails52_haml
           - rails60_haml
           - rails61_haml
+          - rails70_haml
           - rails42_boc
           - rails50_boc
           - rails51_boc
           - rails52_boc
           - rails60_boc
           - rails61_boc
+          - rails70_boc
           - rack
           - rack_boc
           # - pry09
@@ -56,6 +59,9 @@ jobs:
           - { ruby: 2.2,              gemfile: rails61 }
           - { ruby: 2.2,              gemfile: rails61_boc }
           - { ruby: 2.2,              gemfile: rails61_haml }
+          - { ruby: 2.2,              gemfile: rails70 }
+          - { ruby: 2.2,              gemfile: rails70_boc }
+          - { ruby: 2.2,              gemfile: rails70_haml }
           - { ruby: 2.3,              gemfile: rails42 }
           - { ruby: 2.3,              gemfile: rails42_boc }
           - { ruby: 2.3,              gemfile: rails42_haml }
@@ -65,6 +71,9 @@ jobs:
           - { ruby: 2.3,              gemfile: rails61 }
           - { ruby: 2.3,              gemfile: rails61_boc }
           - { ruby: 2.3,              gemfile: rails61_haml }
+          - { ruby: 2.3,              gemfile: rails70 }
+          - { ruby: 2.3,              gemfile: rails70_boc }
+          - { ruby: 2.3,              gemfile: rails70_haml }
           - { ruby: 2.4,              gemfile: rails42 }
           - { ruby: 2.4,              gemfile: rails42_boc }
           - { ruby: 2.4,              gemfile: rails42_haml }
@@ -74,12 +83,21 @@ jobs:
           - { ruby: 2.4,              gemfile: rails61 }
           - { ruby: 2.4,              gemfile: rails61_boc }
           - { ruby: 2.4,              gemfile: rails61_haml }
+          - { ruby: 2.4,              gemfile: rails70 }
+          - { ruby: 2.4,              gemfile: rails70_boc }
+          - { ruby: 2.4,              gemfile: rails70_haml }
           - { ruby: 2.5,              gemfile: rails42 }
           - { ruby: 2.5,              gemfile: rails42_boc }
           - { ruby: 2.5,              gemfile: rails42_haml }
+          - { ruby: 2.5,              gemfile: rails70 }
+          - { ruby: 2.5,              gemfile: rails70_boc }
+          - { ruby: 2.5,              gemfile: rails70_haml }
           - { ruby: 2.6,              gemfile: rails42 }
           - { ruby: 2.6,              gemfile: rails42_boc }
           - { ruby: 2.6,              gemfile: rails42_haml }
+          - { ruby: 2.6,              gemfile: rails70 }
+          - { ruby: 2.6,              gemfile: rails70_boc }
+          - { ruby: 2.6,              gemfile: rails70_haml }
           - { ruby: 2.7,              gemfile: rails42 }
           - { ruby: 2.7,              gemfile: rails42_boc }
           - { ruby: 2.7,              gemfile: rails42_haml }
